chore: add use of gpu to docker for pdf parsing optimization and add new parsing library

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,12 @@ services:
     build: .
     ports:
       - "8000:8000"
+    volumes:
+      - .:/app
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
